--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ android {
     if (keystoreFile.exists()) {
         signingConfigs {
             release {
+                storeType="PKCS12"
                 storeFile = keystoreFile
                 storePassword System.getenv("SIGNING_STORE_PASSWORD")
                 keyAlias System.getenv("SIGNING_KEY_ALIAS")
