--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,11 @@
 apply plugin: 'com.android.application'
 
 android {
-
-    compileSdkVersion 30
-    buildToolsVersion "30.0.2"
+    compileSdkVersion 31
     defaultConfig {
         applicationId "com.surcumference.fingerprintpay"
         minSdkVersion 14
-        targetSdkVersion 30
+        targetSdkVersion 31
         versionCode 21
         versionName "4.0.1"
         buildConfigField "String", "APP_PRODUCT_NAME", "\"FingerprintPay\""
@@ -19,12 +17,6 @@ android {
             shrinkResources false
             zipAlignEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
-    }
-
-    repositories{
-        flatDir{
-            dirs 'libs'
         }
     }
 
@@ -56,7 +48,7 @@ android {
 apply from: 'debug.gradle'
 
 dependencies {
-    implementation 'com.android.support:support-v4:26.0.2'
+    implementation 'androidx.appcompat:appcompat:1.4.0'
     implementation 'com.wei.android.lib:fingerprintidentify:1.2.1'
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.squareup.okhttp3:okhttp:3.12.8'
@@ -66,5 +58,5 @@ dependencies {
     implementation 'com.lzy.net:okgo:3.0.4'
     implementation 'eu.chainfire:libsuperuser:1.1.0.202004101746'
     implementation 'net.lingala.zip4j:zip4j:1.3.2'
-    provided 'de.robv.android.xposed:api:53'
+    compileOnly 'de.robv.android.xposed:api:53'
 }
