--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,19 @@
+import org.gradle.api.initialization.resolve.RepositoriesMode
+
+dependencyResolutionManagement {
+    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+    repositories {
+        google()
+        mavenCentral()
+        jcenter()
+        maven { url 'https://jitpack.io' }
+        maven { url 'https://maven.google.com' }
+        maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
+        flatDir {
+            dirs 'libs'
+        }
+    }
+}
+
+rootProject.name = "FingerprintPay"
 include ':app'
