--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,8 @@ allprojects {
         google()
         mavenCentral()
         maven { url "https://jitpack.io" }
+        jcenter()
+        maven {url 'http://maven.aliyun.com/nexus/content/groups/public/'}
     }
 }
 
